# oxidizr

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  flake.nix  spread.yaml
.github/workflows/: _lint.yml  _spread-matrix.yml  _spread.yml  _test.yml  push.yml  release.yml
snap/: snapcraft.yaml
src/: main.rs
src/experiments/: mod.rs  sudors.rs  uutils.rs
src/utils/: apt.rs  command.rs  files.rs  mod.rs  ubuntu.rs  worker.rs  worker_mock.rs
tests/: rust-coreutils-bins.txt  rust-diffutils-bins.txt  rust-findutils-bins.txt
tests/disable-all/: task.yaml
tests/disable-default/: task.yaml
tests/disable-in-german/: task.yaml
tests/disable-partial/: task.yaml
tests/enable-all/: task.yaml
tests/enable-default/: task.yaml
tests/enable-no-compatibility-check/: task.yaml
tests/enable-partial/: task.yaml
tests/install-package/: task.yaml
tests/lib/: rust-coreutils-bins.txt  sudo-rs.sh  uutils.sh
tests/non-root/: task.yaml
