[package]
name = "oxidizr"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
anyhow = "1.0.96"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
uzers = "0.12.1"
inquire = "0.7.5"
which = "7.0.3"
