[package]
name = "oxidizr"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
uzers = "0.12.1"
inquire = "0.7.5"
which = "8.0.0"
